--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
-<html>
-   <head>
-	<title>helo</title>
-	<h1><a><b>Dr. Mahmoud's</b> Official Website!!!!!!</a></h1>
-   </head>
-   
-   <body>
-	<p>Dr mahmoud is a professional doctor. Referred to as the "<i>first dog doc</i>" People love doctor mahmoud for his awesome skills and doctor mahmoud is very nice</p>
-	<img src="docmahmoud.png">
-	<p></p>
-	 <audio controls>
-		<source src="ba2.mp3">
-		
-	</audio>
-	<h1>Listen to this AWESOME SONG ->></h1>
-	<p><b>doctor mahmoud regrets loving this song anyways thank you for visit doctor mahmous website so much</b></p>
-   </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marshall Store Quick Proof</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#8B5CF6',
+                        secondary: '#6D28D9'
+                    }
+                }
+            }
+        }
+    </script>
+</head>
+<body class="bg-gray-900 text-white min-h-screen">
+    <div class="container mx-auto px-4 py-8 max-w-6xl">
+        <h1 class="text-4xl font-bold mb-8 text-primary bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-purple-600 text-center">Marshall Store Quick Proof</h1>
+        <div class="space-y-6">
+            <div class="flex flex-col items-center gap-4">
+                <label class="relative cursor-pointer bg-gray-800 hover:bg-gray-700 rounded-lg px-6 py-4 transition-all duration-300 border-2 border-dashed border-gray-600 hover:border-primary w-full max-w-md">
+                    <input type="file" id="screenshotInput" accept="image/*" class="hidden">
+                    <span class="flex items-center justify-center gap-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-primary" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                        </svg>
+                        <span class="text-gray-300">Choose a screenshot or drag it here</span>
+                    </span>
+                </label>
+                <button id="downloadBtn" style="display: none;" class="bg-primary hover:bg-secondary text-white font-semibold px-6 py-3 rounded-lg transition-all duration-300 transform hover:scale-105 hover:shadow-lg flex items-center gap-2">
+                    <i class="fas fa-download h-5 w-5"></i>
+                    Download Proof
+                </button>
+            </div>
+            <div class="relative rounded-xl overflow-hidden shadow-2xl bg-gray-800 p-4">
+                <canvas id="proofCanvas" width="1080" height="1920" class="max-w-full mx-auto rounded-lg"></canvas>
+            </div>
+        </div>
+    </div>
+    <script src="index.js"></script>
+</body>
 </html>
